--- a/index.html
+++ b/index.html
@@ -12,44 +12,35 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="logo.png" alt="logo da loja">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Fale conosco</li>
-            <li class="cabecalho-lista-item">Vendas online</li>
+            <li class="cabecalho-lista-item">Envio para todo o Brasil</li>
+            <li class="cabecalho-lista-item">Cupons toda a semana</li>
         </ul>
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <h2 class="escola-titulo">Sobre a loja</h2>
+            <p class="escola-texto-um">produtos de qualidade e preço justo!!</p>
+            <p class="escola-texto-dois">Frete gratis para todo o Brasil!!</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="quadro.png" alt="imagem de quadros">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <h2 class="estudante-titulo">Nossos produtos</h2>
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
-            <h3 class="estudante-nome">Lívia</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="bike.png" alt="foto da bicicleta">
+            <h3 class="estudante-nome">R$ 999,99</h3>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
-            <h3 class="estudante-nome">Gabriela</h3>
-            <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="bike2.png" alt="foto da bicicleta2">
+            <h3 class="estudante-nome">R$ 1.499,90</h3>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-            <h3 class="estudante-nome">Lizandra</h3>
-            <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="bike3.png" alt="foto da lizandra">
+            <h3 class="estudante-nome">R$ 36.990,00</h3>
         </div>
         <span></span>
         <span></span>
